fix alignment of haiku tiles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,7 +38,7 @@ body {
   border: 2px solid slategray;
   min-width: 24px;
   min-height: 24px;
-  margin: 0 1px;
+  margin: 0 2px 0 0px;
   animation: 1s ease-in flip;
 }
 
@@ -99,7 +99,7 @@ body {
 
 .word {
   display: flex;
-  margin: 4px 12px;
+  margin: 4px 24px 4px 0px;
 }
 
 .keyboard {
